product title changed in index.pug

--- a/Frontend/src/templates/index.pug
+++ b/Frontend/src/templates/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
         link(rel='shortcut icon', href=favicon, type='image/x-icon')
 
 
-        title Eyesage | Face Recognition
+        title WatchMask | Mask Detection
     body
         
         #app 
